config/templates/sampleapp-prod/comp-line-dashboard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: line-dashboard
spec:
  replicas: 3
