config/templates/sampleapp-prod/comp-line-dashboard/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: line-dashboard
spec:
  host: $COMP_0817_ROUTE_HOST
  port:
    targetPort: 8080-tcp
  subdomain: ""
  to:
    kind: Service
    name: line-dashboard
    weight: 100
  wildcardPolicy: None
status:
  ingress: []
